Calling LibLoad and LibFree multiple times on a file that plays an Action crashes Blender #44069

Closed
opened 2015-03-20 21:23:11 +01:00 by mobious · 9 comments

System Information
Windows 7 64-bit
Intel HD Graphics 4000

Blender Version
2.72b 9e963ae, 2.73a bbf09d9

Files
loadme.blend - Contains a cube that plays a simple action (no armature)
load.blend - Loads loadme.blend using LibLoad in 'Scene' mode and load_actions=True. Pressing Space reloads the file.

Description
Blender crashes when running a BGE script that repeatedly calls LibFree and LibLoad in 'Scene' mode with load_actions=True on a file that contains an object that plays an action.

Exact steps for others to reproduce the error
Place the attached .blend files in the same folder. Open load.blend and start the game engine. Press space to reload the file. After reloading several times (3 times on my computer), Blender crashes.

Additional Notes
This crash only happens if the loaded object plays an action. i.e. the crash will not occur if you remove the Action Actuator in loadme.blend but keep the action itself.

**System Information** Windows 7 64-bit Intel HD Graphics 4000 **Blender Version** 2.72b 9e963ae, 2.73a bbf09d9 **Files** [loadme.blend](https://archive.blender.org/developer/F153458/loadme.blend) - Contains a cube that plays a simple action (no armature) [load.blend](https://archive.blender.org/developer/F153459/load.blend) - Loads loadme.blend using LibLoad in 'Scene' mode and load_actions=True. Pressing Space reloads the file. **Description** Blender crashes when running a BGE script that repeatedly calls LibFree and LibLoad in 'Scene' mode with load_actions=True on a file that contains an object that plays an action. **Exact steps for others to reproduce the error** Place the attached .blend files in the same folder. Open load.blend and start the game engine. Press space to reload the file. After reloading several times (3 times on my computer), Blender crashes. **Additional Notes** This crash only happens if the loaded object plays an action. i.e. the crash will not occur if you remove the Action Actuator in loadme.blend but keep the action itself.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mobious

Added subscriber: @mobious

Added subscriber: @pgi

Added subscriber: @pgi

I can confirm this on the latest sources (2.74 release). This is not related to the lib-free/lib-load material caching issue, it's a bug of its own. This is the stack trace of gdb:

Program received signal SIGSEGV, Segmentation fault.
__strcmp_sse2_unaligned () at ../sysdeps/x86_64/multiarch/strcmp-sse2-unaligned.S:30
30	../sysdeps/x86_64/multiarch/strcmp-sse2-unaligned.S: No such file or directory.
(gdb) bt
- 0  __strcmp_sse2_unaligned () at ../sysdeps/x86_64/multiarch/strcmp-sse2-unaligned.S:30
- 1  0x0000000002dea6e7 in BL_InterpolatorList::GetScalarInterpolator (this=0x7bfdcb0, rna_path=0x4a5d338 "location", array_index=0)
    at /home/pgi/blender-git/blender/source/gameengine/Converter/KX_BlenderScalarInterpolator.cpp:77
- 2  0x0000000002efb740 in BL_CreateIPO (action=0x7bef958, gameobj=0x99058d0, converter=0x6e1cad0) at /home/pgi/blender-git/blender/source/gameengine/Ketsji/KX_IpoConvert.cpp:123
- 3  0x0000000002ef9002 in BL_Action::Play (this=0x9977c00, name=0x7bef97a "CubeAction", start=1, end=60, priority=0, blendin=0, play_mode=0, layer_weight=-1, ipo_flags=0, playback_speed=1, blend_mode=0)
    at /home/pgi/blender-git/blender/source/gameengine/Ketsji/BL_Action.cpp:161
#4  0x0000000002edc456 in BL_ActionManager::PlayAction (this=0x9977b90, name=0x7bef97a "CubeAction", start=1, end=60, layer=0, priority=0, blendin=0, play_mode=0, layer_weight=-1, ipo_flags=0, 
    playback_speed=1, blend_mode=0) at /home/pgi/blender-git/blender/source/gameengine/Ketsji/BL_ActionManager.cpp:115
#5  0x0000000002e6dc7f in KX_GameObject::PlayAction (this=0x99058d0, name=0x7bef97a "CubeAction", start=1, end=60, layer=0, priority=0, blendin=0, play_mode=0, layer_weight=0, ipo_flags=0, 
    playback_speed=1, blend_mode=0) at /home/pgi/blender-git/blender/source/gameengine/Ketsji/KX_GameObject.cpp:459
- 6  0x0000000002de3f1d in BL_ActionActuator::Update (this=0x7b24bf0, curtime=72,06815317471542, frame=true) at /home/pgi/blender-git/blender/source/gameengine/Converter/BL_ActionActuator.cpp:282
- 7  0x0000000002f37030 in SCA_LogicManager::UpdateFrame (this=0x6ee2cd0, curtime=72,06815317471542, frame=true) at /home/pgi/blender-git/blender/source/gameengine/GameLogic/SCA_LogicManager.cpp:225
- 8  0x0000000002ebd1c0 in KX_Scene::LogicUpdateFrame (this=0x6ee12c0, curtime=72,06815317471542, frame=true) at /home/pgi/blender-git/blender/source/gameengine/Ketsji/KX_Scene.cpp:1675
- 9  0x0000000002e816e4 in KX_KetsjiEngine::NextFrame (this=0x6ab8ae0) at /home/pgi/blender-git/blender/source/gameengine/Ketsji/KX_KetsjiEngine.cpp:678
#10 0x0000000002d95a2a in BL_KetsjiNextFrame (ketsjiengine=0x6ab8ae0, C=0x65c9da8, win=0x82c4aa8, scene=0x822c558, ar=0x82094b8, keyboarddevice=0x7e31440, mousedevice=0x7e32700, draw_letterbox=0)
    at /home/pgi/blender-git/blender/source/gameengine/BlenderRoutines/BL_KetsjiEmbedStart.cpp:136
#11 0x0000000002d9707b in StartKetsjiShell (C=0x65c9da8, ar=0x82094b8, cam_frame=0x7fffffffda90, always_use_expand_framing=1)
    at /home/pgi/blender-git/blender/source/gameengine/BlenderRoutines/BL_KetsjiEmbedStart.cpp:573
- 12 0x0000000001c518fd in game_engine_exec (C=0x65c9da8, op=0x6ab4da8) at /home/pgi/blender-git/blender/source/blender/editors/space_view3d/view3d_view.c:1665
- 13 0x0000000001b15ac0 in wm_operator_invoke (C=0x65c9da8, ot=0x69094e8, event=0x824e7c8, properties=0x7fe85b8, reports=0x0, poll_only=false)
    at /home/pgi/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1048
#14 0x0000000001b1702f in wm_handler_operator_call (C=0x65c9da8, handlers=0x8209600, handler=0x6ab9b78, event=0x824e7c8, properties=0x7fe85b8)
    at /home/pgi/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1639
- 15 0x0000000001b178c4 in wm_handlers_do_intern (C=0x65c9da8, event=0x824e7c8, handlers=0x8209600) at /home/pgi/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1904
- 16 0x0000000001b17c7c in wm_handlers_do (C=0x65c9da8, event=0x824e7c8, handlers=0x8209600) at /home/pgi/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2013
- 17 0x0000000001b18aff in wm_event_do_handlers (C=0x65c9da8) at /home/pgi/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2352
- 18 0x0000000001b0d4ec in WM_main (C=0x65c9da8) at /home/pgi/blender-git/blender/source/blender/windowmanager/intern/wm.c:487
#19 0x0000000001b0c697 in main (argc=1, argv=0x7fffffffded8) at /home/pgi/blender-git/blender/source/creator/creator.c:1864

The stack trace appears to be consistent on each crash.

I can confirm this on the latest sources (2.74 release). This is not related to the lib-free/lib-load material caching issue, it's a bug of its own. This is the stack trace of gdb: ``` Program received signal SIGSEGV, Segmentation fault. __strcmp_sse2_unaligned () at ../sysdeps/x86_64/multiarch/strcmp-sse2-unaligned.S:30 30 ../sysdeps/x86_64/multiarch/strcmp-sse2-unaligned.S: No such file or directory. (gdb) bt - 0 __strcmp_sse2_unaligned () at ../sysdeps/x86_64/multiarch/strcmp-sse2-unaligned.S:30 - 1 0x0000000002dea6e7 in BL_InterpolatorList::GetScalarInterpolator (this=0x7bfdcb0, rna_path=0x4a5d338 "location", array_index=0) at /home/pgi/blender-git/blender/source/gameengine/Converter/KX_BlenderScalarInterpolator.cpp:77 - 2 0x0000000002efb740 in BL_CreateIPO (action=0x7bef958, gameobj=0x99058d0, converter=0x6e1cad0) at /home/pgi/blender-git/blender/source/gameengine/Ketsji/KX_IpoConvert.cpp:123 - 3 0x0000000002ef9002 in BL_Action::Play (this=0x9977c00, name=0x7bef97a "CubeAction", start=1, end=60, priority=0, blendin=0, play_mode=0, layer_weight=-1, ipo_flags=0, playback_speed=1, blend_mode=0) at /home/pgi/blender-git/blender/source/gameengine/Ketsji/BL_Action.cpp:161 #4 0x0000000002edc456 in BL_ActionManager::PlayAction (this=0x9977b90, name=0x7bef97a "CubeAction", start=1, end=60, layer=0, priority=0, blendin=0, play_mode=0, layer_weight=-1, ipo_flags=0, playback_speed=1, blend_mode=0) at /home/pgi/blender-git/blender/source/gameengine/Ketsji/BL_ActionManager.cpp:115 #5 0x0000000002e6dc7f in KX_GameObject::PlayAction (this=0x99058d0, name=0x7bef97a "CubeAction", start=1, end=60, layer=0, priority=0, blendin=0, play_mode=0, layer_weight=0, ipo_flags=0, playback_speed=1, blend_mode=0) at /home/pgi/blender-git/blender/source/gameengine/Ketsji/KX_GameObject.cpp:459 - 6 0x0000000002de3f1d in BL_ActionActuator::Update (this=0x7b24bf0, curtime=72,06815317471542, frame=true) at /home/pgi/blender-git/blender/source/gameengine/Converter/BL_ActionActuator.cpp:282 - 7 0x0000000002f37030 in SCA_LogicManager::UpdateFrame (this=0x6ee2cd0, curtime=72,06815317471542, frame=true) at /home/pgi/blender-git/blender/source/gameengine/GameLogic/SCA_LogicManager.cpp:225 - 8 0x0000000002ebd1c0 in KX_Scene::LogicUpdateFrame (this=0x6ee12c0, curtime=72,06815317471542, frame=true) at /home/pgi/blender-git/blender/source/gameengine/Ketsji/KX_Scene.cpp:1675 - 9 0x0000000002e816e4 in KX_KetsjiEngine::NextFrame (this=0x6ab8ae0) at /home/pgi/blender-git/blender/source/gameengine/Ketsji/KX_KetsjiEngine.cpp:678 #10 0x0000000002d95a2a in BL_KetsjiNextFrame (ketsjiengine=0x6ab8ae0, C=0x65c9da8, win=0x82c4aa8, scene=0x822c558, ar=0x82094b8, keyboarddevice=0x7e31440, mousedevice=0x7e32700, draw_letterbox=0) at /home/pgi/blender-git/blender/source/gameengine/BlenderRoutines/BL_KetsjiEmbedStart.cpp:136 #11 0x0000000002d9707b in StartKetsjiShell (C=0x65c9da8, ar=0x82094b8, cam_frame=0x7fffffffda90, always_use_expand_framing=1) at /home/pgi/blender-git/blender/source/gameengine/BlenderRoutines/BL_KetsjiEmbedStart.cpp:573 - 12 0x0000000001c518fd in game_engine_exec (C=0x65c9da8, op=0x6ab4da8) at /home/pgi/blender-git/blender/source/blender/editors/space_view3d/view3d_view.c:1665 - 13 0x0000000001b15ac0 in wm_operator_invoke (C=0x65c9da8, ot=0x69094e8, event=0x824e7c8, properties=0x7fe85b8, reports=0x0, poll_only=false) at /home/pgi/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1048 #14 0x0000000001b1702f in wm_handler_operator_call (C=0x65c9da8, handlers=0x8209600, handler=0x6ab9b78, event=0x824e7c8, properties=0x7fe85b8) at /home/pgi/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1639 - 15 0x0000000001b178c4 in wm_handlers_do_intern (C=0x65c9da8, event=0x824e7c8, handlers=0x8209600) at /home/pgi/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1904 - 16 0x0000000001b17c7c in wm_handlers_do (C=0x65c9da8, event=0x824e7c8, handlers=0x8209600) at /home/pgi/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2013 - 17 0x0000000001b18aff in wm_event_do_handlers (C=0x65c9da8) at /home/pgi/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2352 - 18 0x0000000001b0d4ec in WM_main (C=0x65c9da8) at /home/pgi/blender-git/blender/source/blender/windowmanager/intern/wm.c:487 #19 0x0000000001b0c697 in main (argc=1, argv=0x7fffffffded8) at /home/pgi/blender-git/blender/source/creator/creator.c:1864 ``` The stack trace appears to be consistent on each crash.
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez

Added subscriber: @you.le

Added subscriber: @you.le

Added subscriber: @JacobMerrill-1

Added subscriber: @JacobMerrill-1

This issue was referenced by 607dca0705

This issue was referenced by 607dca070587f4d8bc4afa3c4a49e0f9a74873cd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44069
No description provided.