BGE: Fix T44069 playing action during libfree.