source/gameengine/Ketsji/BL_ActionManager.cpp
@@ -26,6 +26,9 @@
 
 #include "BL_Action.h"
 #include "BL_ActionManager.h"
+#include "DNA_ID.h"
+
+#define IS_TAGGED(_id) ((_id) && (((ID *)_id)->flag & LIB_DOIT))
 
 BL_ActionManager::BL_ActionManager(class KX_GameObject *obj):
 	m_obj(obj),
@@ -121,6 +124,18 @@ void BL_ActionManager::StopAction(short layer)
 	BL_Action *action = GetAction(layer);
 
 	if (action) action->Stop();
+}
+
+void BL_ActionManager::RemoveTaggedActions()
+{
+	for (BL_ActionMap::iterator it = m_layers.begin(); it != m_layers.end();) {
+		if (IS_TAGGED(it->second->GetAction())) {
+			delete it->second;
+			m_layers.erase(it++);
+		}
+		else
+			++it;
+	}
 }
 
 bool BL_ActionManager::IsActionDone(short layer)
